--- a/sass/components/_mail-sub.scss
+++ b/sass/components/_mail-sub.scss
@@ -1,11 +1,11 @@
-.mail-sub {
+.mail-field {
     display: flex;
     display: inline-block;
     margin-left: auto;
     align-items: end;
 }
 
-.mail-links {
+.mail-sub {
     display: flex;
     margin-left: auto;
     align-items: center;
@@ -23,14 +23,13 @@
     background-color: transparent;
     padding-left: 16px;
     color: $white-color-60transp;
-}
-
-.mail-input:focus {
+    &:focus {
     border: 1px solid rgba(255, 255, 255, 0.3);
     outline: none;
+    }
 }
 
-.mail-link {
+.mail-sub__link {
     display: flex;
     width: 200px;
     height: 50px;
@@ -47,19 +46,16 @@
     background-color: $accent-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color $main-transition;
+    &:hover,
+    &:focus {
+        background-color: $accent-color-active;
+    }
 }
 
-.mail-link:hover,
-.mail-link:focus {
-    background-color: $accent-color-active;
-
-}
-
-
-.mail-icon {
+.mail-sub__icon {
     fill: $primary-white-color;
     align-items: center;
     justify-content: center;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill $main-transition;
 }
