--- a/sass/components/_activity.scss
+++ b/sass/components/_activity.scss
@@ -1,37 +1,34 @@
 .activity {
     align-items: center;
-    margin-left: auto;
-    margin-right: auto;
+    @include marginAuto;
 }
 
 .section.activity {
     padding-top: 0;
 }
 
-.activity-title {
+.section-title {
     margin-bottom: 50px;
     padding-top: 0;
 }
 
-.act-list {
+.act {
     display: flex;
     flex-wrap: wrap;
 }
 
-.act-list .item {
+.act__item {
     margin-right: 30px;
     position: relative;
-}
-
-.act-list .item:last-child {
+    &:last-child {
     margin-right: 0;
+    }
 }
 
-.act-text {
+.act__text {
     font-size: 14px;
     font-weight: 700;
     line-height: 16px;
-    letter-spacing: 0.03em;
     text-align: center;
     position: absolute;
     bottom: 0;
