--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -1,36 +1,28 @@
-.address-link {
+.address-nav {
+    margin-right: 70px;
+    width: 231px;
+}
+
+.address__link {
     display: inline-block;
-    font-style: normal;
     color: $white-color-60transp;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     text-decoration: none;
     letter-spacing: 0.03em;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color $main-transition;
+    &:hover,
+    &:focus {
+        color: $accent-color;
+    }
 }
 
-.adress-nav {
-    margin-right: 70px;
-    width: 231px;
-}
-
-.address-list-item .maps {
-    font-style: normal;
+.maps {
     color: $primary-white-color;
-    text-decoration: none;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
 }
 
-.address-list-item:not(:last-child) {
+.address-list__item:not(:last-child) {
     margin-bottom: 9px;
-}
-
-.address-link:hover,
-.address-link:focus {
-    color: $accent-color;
 }
