--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,9 +1,9 @@
-.clients-list {
+.client {
     display: flex;
 
 }
 
-.client-item {
+.client__item {
     width: calc((100% - 150px) / 6);
     height: 92px;
     @include centeredFlex;
@@ -11,32 +11,30 @@
 
 }
 
-.client-item:not(:first-child) {
+.client__item:not(:first-child) {
     margin-left: 30px;
 }
 
-.client-link {
+.client__link {
     @include centeredFlex;
     width: 100%;
     height: 100%;
     border: 1px solid $social-icons-grey;
     border-radius: 4px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color $main-transition;
+    &:hover svg,
+    &:focus svg {
+            fill: $accent-color;
+    }
+
+    &:hover,
+    &:focus {
+            border-color: $accent-color;
+    }
 }
 
-.client-icon {
+.client__icon {
     fill: $social-icons-grey;
     @include centeredFlex;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.client-link:hover svg,
-.client-link:focus svg {
-    fill: $accent-color;
-}
-
-.client-link:hover,
-.client-link:focus {
-    border-color: $accent-color;
+    transition: fill $main-transition;
 }
