--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,25 +1,23 @@
-.feature-list {
+.feature {
     display: flex;
 }
 
-.feature-icon {
+.feature__icon {
     height: 120px;
     @include centeredFlex;
     background-color: $light-gray-color;
     margin-bottom: 30px;
 }
 
-.feature-list .item {
+.feature__item {
     width: calc((100% - 90px) / 4);
     margin-right: 30px;
-
-}
-
-.feature-list .item:last-child {
+    &:last-child {
     margin-right: 0px;
+    }
 }
 
-.feature-title {
+.feature__title {
     font-weight: 700;
     font-style: normal;
     font-size: 14px;
@@ -28,7 +26,7 @@
     text-transform: uppercase;
 }
 
-.feature-descript {
+.feature__descript {
     color: $secondary-text-color;
     font-size: 14px;
     line-height: 1.71;
