--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,7 +11,7 @@
     margin: 0 auto;
 }
 
-.hero-title {
+.hero__title {
     color: $primary-white-color;
     font-weight: 900;
     font-size: 44px;
@@ -20,24 +20,6 @@
     margin-bottom: 30px;
 }
 
-.hero-button {
-    padding: 10px 32px;
-    min-width: 216px;
-    font-family: inherit;
-    color: $primary-white-color;
-    background-color: $accent-color;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    border-radius: 4px;
-    cursor: pointer;
-    border: 0;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:active {
-        background-color: $accent-color-active;
-    }
-}
+
 
 
