--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,11 +1,20 @@
-.title-description {
+.portfolio-nav {
+    @include centeredFlex;
+    margin-bottom: 50px;
+}
+
+.projects-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.project__description {
     font-size: 16px;
     line-height: 1.88;
     color: $secondary-text-color;
 }
 
-
-.project-names .title {
+.project__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -14,24 +23,17 @@
     color: $primary-text-color;
 }
 
-.portfolio-nav {
-    @include centeredFlex;
-    margin-bottom: 50px;
+.project__link {
+    transition: box-shadow $main-transition;
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+            0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
-
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.flex-link {
-    display: block;
-    text-decoration: none;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.project-names {
+.project__name {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 24px;
@@ -41,29 +43,19 @@
 }
 
 
-.flex-container .flex-item {
+.project__item {
     width: calc((100% - 60px) / 3);
     margin-right: 30px;
     margin-bottom: 30px;
+    &:nth-child(3n) {
+            margin-right: 0;
+        }
+    &:nth-last-child(-n + 3) {
+            margin-bottom: 0;
+        }
 }
 
-
-.flex-container .flex-item:nth-child(3n) {
-    margin-right: 0;
-}
-
-.flex-container .flex-item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-}
-
-.flex-link:hover,
-.flex-link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.flex-thumb {
+.project__thumb {
     position: relative;
     overflow: hidden;
 }
@@ -84,10 +76,10 @@
 
     transform: translateY(100%);
     opacity: 0;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform $main-transition, opacity $main-transition;
+    .project__link:hover & {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
-.flex-link:hover .text-overlay {
-    transform: translateY(0);
-    opacity: 1;
-}
