--- a/sass/components/_social-sub.scss
+++ b/sass/components/_social-sub.scss
@@ -1,3 +1,8 @@
+.social-sub {
+    @include centeredFlex;
+    gap: 10px;
+}
+
 .join-title {
     display: flex;
     margin-bottom: 20px;
@@ -6,20 +11,20 @@
     color: $primary-white-color;
 }
 
-.join-link {
+.social-sub__link {
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     @include centeredFlex;
-    transition: 250ms background-color cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color $main-transition;
     &:hover,
     &:focus {
         background-color: $accent-color;
     }
 }
 
-.join-list-item {
+.social-sub__item {
     width: calc((100% - 30px) / 4);
     width: 44px;
     height: 44px;
@@ -28,11 +33,7 @@
     }
 }
 
-.join-icon {
+.social-sub__icon {
     fill: $primary-white-color;
 }
 
-.join-list {
-    @include centeredFlex;
-    gap: 10px;
-}
