--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,3 +7,5 @@ $light-gray-color: #F5F4FA;
 $dark-gray-color: #2F303A;
 $white-color-60transp: #FFFFFF99;
 $social-icons-grey: #afb1b8;
+
+$main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
