--- a/sass/components/_mail-sub.scss
+++ b/sass/components/_mail-sub.scss
@@ -6,9 +6,8 @@
 }
 
 .mail-sub {
-    display: flex;
+    @include centeredFlex;
     margin-left: auto;
-    align-items: center;
     gap: 12px;
 
 }
@@ -30,18 +29,15 @@
 }
 
 .mail-sub__link {
-    display: flex;
+    @include centeredFlex;
     width: 200px;
     height: 50px;
-    font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 30px;
     color: $primary-white-color;
     text-decoration: none;
     letter-spacing: 0.06em;
-    align-items: center;
-    justify-content: center;
     gap: 12px;
     background-color: $accent-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -55,7 +51,6 @@
 
 .mail-sub__icon {
     fill: $primary-white-color;
-    align-items: center;
-    justify-content: center;
+    @include centeredFlex;
     transition: fill $main-transition;
 }
