--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,27 @@ p {
   color: #FFFFFF;
 }
 
+.hero {
+  max-width: 1600px;
+  background-color: #2F303A;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+  padding-bottom: 200px;
+  padding-top: 200px;
+  margin: 0 auto;
+}
+
+.hero__title {
+  color: #FFFFFF;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.3;
+  letter-spacing: 0.06em;
+  margin-bottom: 30px;
+}
+
 .activity {
   align-items: center;
   margin-left: auto;
@@ -228,11 +249,8 @@ p {
 .address__link {
   display: inline-block;
   color: rgba(255, 255, 255, 0.6);
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  text-decoration: none;
-  letter-spacing: 0.03em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address__link:hover, .address__link:focus {
@@ -440,27 +458,6 @@ p {
   width: 100%;
 }
 
-.hero {
-  max-width: 1600px;
-  background-color: #2F303A;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  text-align: center;
-  padding-bottom: 200px;
-  padding-top: 200px;
-  margin: 0 auto;
-}
-
-.hero__title {
-  color: #FFFFFF;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.3;
-  letter-spacing: 0.06em;
-  margin-bottom: 30px;
-}
-
 .mail-field {
   display: flex;
   display: inline-block;
@@ -516,7 +513,6 @@ p {
 
 .mail-sub__icon {
   fill: #FFFFFF;
-  display: flex;
   align-items: center;
   justify-content: center;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
