--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,7 +1,9 @@
 .hero {
     max-width: 1600px;
     background-color: $dark-gray-color;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: 
+                    linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                    url(../../images/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
