--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+.team, .send-button, .activity, .container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 body {
   font-family: Roboto, sans-serif;
   font-weight: 400;
@@ -12,15 +22,8 @@ svg {
 }
 
 .container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
+  max-width: 1200px;
   padding: 0 15px;
-}
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .section-title {
@@ -51,15 +54,8 @@ svg {
 }
 
 .link {
-  font-style: normal;
   display: block;
-  color: #212121;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   text-decoration: none;
-  position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -79,6 +75,10 @@ h6,
 p {
   margin-top: 0;
   margin-bottom: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 .header {
@@ -107,6 +107,14 @@ p {
 .nav-menu__link:focus,
 .nav-menu__link--current {
   color: #2196F3;
+}
+
+.nav-menu__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  position: relative;
 }
 
 .nav-menu__link--current::after {
@@ -180,7 +188,7 @@ p {
 .hero {
   max-width: 1600px;
   background-color: #2F303A;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/background.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
@@ -200,8 +208,6 @@ p {
 
 .activity {
   align-items: center;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .section.activity {
@@ -247,12 +253,16 @@ p {
 }
 
 .address__link {
+  text-decoration: none;
   display: inline-block;
   color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
+  letter-spacing: 0.03em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .address__link:hover, .address__link:focus {
   color: #2196F3;
 }
@@ -334,8 +344,6 @@ p {
 }
 
 .send-button {
-  margin-left: auto;
-  margin-right: auto;
   width: 200px;
   height: 50px;
   color: #FFFFFF;
@@ -787,7 +795,6 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
 }
 
 .join-title {
@@ -817,9 +824,6 @@ textarea {
   width: 44px;
   height: 44px;
 }
-.social-sub__item:not(:first-child) {
-  margin-left: 10px;
-}
 
 .social-sub__icon {
   fill: #FFFFFF;
@@ -834,8 +838,6 @@ textarea {
 
 .team {
   background-color: #F5F4FA;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .team-member__position {
