--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -74,7 +74,7 @@
 }
 
 .send-button {
-    @include marginAuto;
+    @extend %marginAuto;
     width: 200px;
     height: 50px;
     color: $primary-white-color;
