--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -26,6 +26,15 @@
         color: $accent-color;
 }
 
+.nav-menu__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    position: relative;
+    
+}
+
 .nav-menu__link--current::after {
     content: "";
     position: absolute;
