--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/variables";
 @import "./utils/mixins";
+@import "./utils/placeholders";
 @import "./base/common";
 @import "./base/reset";
 
@@ -14,7 +15,6 @@
 @import "./components/clients";
 @import "./components/features";
 @import "./components/footer";
-
 @import "./components/mail-sub";
 @import "./components/modal";
 @import "./components/portfolio";
