--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -4,6 +4,7 @@
 }
 
 .address__link {
+    font-style: normal;
     text-decoration: none;
     display: inline-block;
     color: $white-color-60transp;
