--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -47,6 +47,7 @@ svg {
 }
 
 .link {
+    font-display: none;
     display: block;
     text-decoration: none;
     transition: color $main-transition;
