--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ svg {
 }
 
 .link {
+  font-display: none;
   display: block;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
