--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -6,8 +6,7 @@
 .nav {
     display: flex;
     align-items: center;
-    justify-content: start; 
-    position: relative; 
+    justify-content: start;
 }
 
 .nav-menu {
@@ -20,13 +19,10 @@
     margin-left: 50px;
 }
 
-.nav-menu__link:hover,
-.nav-menu__link:focus,
-.nav-menu__link--current {
-        color: $accent-color;
-}
+
 
 .nav-menu__link {
+    color: $primary-text-color;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -35,6 +31,11 @@
     
 }
 
+.nav-menu__link:hover,
+.nav-menu__link:focus,
+.nav-menu__link--current {
+        color: $accent-color;
+}
 .nav-menu__link--current::after {
     content: "";
     position: absolute;
