--- a/css/main.css
+++ b/css/main.css
@@ -189,7 +189,7 @@ a {
 .hero {
   max-width: 1600px;
   background-color: #2F303A;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/background.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
