--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,7 +3,7 @@
     background-color: $dark-gray-color;
     background-image: 
                     linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-                    url(../../images/background.jpg);
+                    url('/images/background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
